--- a/Css/index.css
+++ b/Css/index.css
@@ -1,33 +1,77 @@
 /*全局变量*/
 :root{
-	/*background*/
-	--cb:red;
-	--hb:red;
-	--ab:red;
-	/*color*/
-	--cc:red;
-	--hc:red;
-	--ac:red;
-	/*border*/
-	--cbr:red;
-	--hbr:red;
-	--abr:red;
-	/*shadow*/
-	--cs:red;
-	--hs:red;
-	--as:red;
+
 }
+
 /*全局样式*/
 *{
 	padding: 0;
 	margin: 0;
-	outline:var(--as) 1px solid;
+	outline:red 1px solid;
 }
+
+html,body{
+	width: 100%;
+	height: 100%;
+	background-color:hsla(0,0%,88%,1.00);
+}
+
+
+/*PC样式*/
+@media screen and (min-width: 1025px){
+	#TOP{
+		display: flex;
+		justify-content: center;
+		align-items: center;
+	}
+	#logoimg{
+		padding: 6px;
+		height: 64px;
+	}	
+	#toptext{
+		padding: 6px;
+		flex: 1;
+	}
+	#sets{
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		margin: auto 6px;
+	}
+	
+	
+	#MID{
+		display: flex;
+		height: calc(100% - 76px);
+		
+	}
+	
+	#MIDL{
+		display: flex;
+		width: 15%;
+		flex-direction:column;
+	}
+	#hs{
+		margin: 6px 6px 6px auto;
+		width: 48px;
+		height: 48px;
+	}
+	.ME{
+		margin: 6px;
+	}
+	.MEF{
+		
+	}
+	
+	#MIDM{
+		flex:1;
+	}
+	#MIDR{
+		width: 15%;
+	}
+}
+
 
 @media screen and (max-width: 1024px){
-	
-}
 
-@media screen and (min-width: 1025px){
-	
 }
