--- a/Css/index.css
+++ b/Css/index.css
@@ -9,66 +9,81 @@
 	margin: 0;
 	outline:red 1px solid;
 }
-
-html,body{
+html{
 	width: 100%;
 	height: 100%;
-	background-color:hsla(0,0%,88%,1.00);
 }
-
+.body{
+	width: 100%;
+	height: 100%;
+}
 
 /*PC样式*/
 @media screen and (min-width: 1025px){
+/*顶栏样式*/
 	#TOP{
 		display: flex;
 		justify-content: center;
 		align-items: center;
 	}
+/*logo*/
 	#logoimg{
 		padding: 6px;
 		height: 64px;
-	}	
+	}
+/*中部文本*/
 	#toptext{
 		padding: 6px;
 		flex: 1;
 	}
+/*右方文本*/
 	#sets{
 		display: flex;
 		justify-content: center;
 		align-items: center;
 		margin: auto 6px;
 	}
-	
-	
+/*主体样式*/
 	#MID{
 		display: flex;
 		height: calc(100% - 76px);
-		
 	}
-	
+	.mid{
+		overflow-y:auto;
+	}
+/*目录栏*/
 	#MIDL{
 		display: flex;
 		width: 15%;
 		flex-direction:column;
+		background-color:green;
+		padding: 32px 0px;
 	}
-	#hs{
-		margin: 6px 6px 6px auto;
-		width: 48px;
-		height: 48px;
+	#MIDLL{
+		display: flex;
+		flex-direction: column;
+		margin: auto 8px;
 	}
-	.ME{
-		margin: 6px;
+/*目录展开收起按钮*/
+	#showhide{
+		margin:6px 6px 6px auto;
+		height: 32px;
+		width: 32px;
 	}
-	.MEF{
-		
+	.blockt,.menus{
+		padding: 6px;		
 	}
-	
+
+/*中间页面*/
 	#MIDM{
 		flex:1;
 	}
+
+/*右边侧边栏*/
 	#MIDR{
 		width: 15%;
 	}
+
 }
 
 
