--- a/Css/index.css
+++ b/Css/index.css
@@ -1,16 +1,18 @@
 /*全局变量*/
 :root{
-	/*body背景色,夜间模式为 rgba(0,36,57,1.00) */
-	--bodyC:honeydew;
-	/*顶部背景色，夜间模式为 rgba(0,50,98,1.00) */
-	--TOPC:white;
+	/*body背景色,夜间模式为  */
+	--bodyC:;
+	/*顶部背景色，夜间模式为  */
+	--TOPC:;
+	/*主题背景色，夜间模式为  */
+	--MIDC:
 }
 
 /*全局样式*/
 *{
 	padding: 0;
 	margin: 0;
-	outline:red 1px solid;
+	/*outline:red 1px solid;*/
 }
 html{
 	width: 100%;
@@ -47,15 +49,20 @@ html{
 	}
 	
 	.body{
-		background-color:var(--bodyC);
+		background-color:RGB(21, 24, 39);
 	}
-	
+	p{
+		color: white;
+	}
+	div{
+		color: white;
+	}
 /*顶栏样式*/
 	#TOP{
 		display: flex;
 		justify-content: center;
 		align-items: center;
-		background-color: var(--TOPC);
+		background-color:RGB(26, 31, 50);
 	}
 /*logo*/
 	#logoimg{
@@ -79,18 +86,18 @@ html{
 /*主体样式*/
 	#MID{
 		display: flex;
-		height: calc(100% - 76px - 16px);
+		height: calc(100% - 76px);
 	}
 	.mid{
 		margin: 8px;
 		border-radius: 16px;
 		display: flex;
+		background:RGB(26, 31, 50);
 	}
 /*目录栏*/
 	#MIDL{
 		width: 15%;
 		flex-direction:column;
-		background-color:green;
 	}
 	#MIDLT{
 		display: flex;
@@ -115,7 +122,6 @@ html{
 		flex-direction: column;
 		padding: 8px;
 		flex:1;
-		background-color: blue;
 	}
 	#MIDMT{
 		flex: 1;
@@ -143,7 +149,6 @@ html{
 /*右边侧边栏*/
 	#MIDR{
 		width: 15%;
-		background-color: purple;
 	}
 	#MIDRR{
 		flex: 1;
