--- a/Css/index.css
+++ b/Css/index.css
@@ -29,24 +29,22 @@ html{
 /*滚动条*/	
 	/*定义滚动条高宽及背景 高宽分别对应横竖滚动条的尺寸*/
 	::-webkit-scrollbar{
-		width: 8px;
+    	width: 6px;
+    	background-color: #14172A;
+		border-radius: 3px;
 	}
 	
 	/*定义滚动条轨道角*/
 	::-webkit-scrollbar-track{
-		background-color: blue;
-		border-radius: 10px;
+
 	}
  
 	/*定义滑块*/
 	::-webkit-scrollbar-thumb{
-		border-radius: 10px;
-		background-color: red;
+		border-radius: 6px;
+    	background-color: RGBa(43, 92, 175, 1.00);
 	}
-	/*箭头按钮*/
-	::-webkit-scrollbar-button{
 
-	}
 	html{
 		display: flex;
 		flex-direction: column;
@@ -54,7 +52,7 @@ html{
 	.body{
 		display: flex;
 		flex-direction: column;
-		background-color:RGB(21, 24, 39);
+		background-color:RGBa(21, 24, 39,1.00);
 	}
 	p{
 		color: white;
