--- a/Css/index.css
+++ b/Css/index.css
@@ -1,18 +1,22 @@
 /*全局变量*/
 :root{
-	/*body背景色,夜间模式为  */
+	/*文字颜色，夜间模式为 RGBa(208, 212, 230,1.00) */
+	--textC:RGBa(208, 212, 230,1.00);
+	/*body背景色,夜间模式为 RGBa(21, 24, 39,1.00) */
 	--bodyC:;
-	/*顶部背景色，夜间模式为  */
+	/*顶部及卡片背景色，夜间模式为 RGBa(26, 31, 50，1.00) */
 	--TOPC:;
-	/*主题背景色，夜间模式为  */
-	--MIDC:
+	/*主题背景色，夜间模式为 RGBa(26, 31, 50,1.00) */
+	--MIDC:;
+	/*滚动条滑块，夜间模式为 RGBa(39, 44, 63,1.00) */
+	--color1:hsla(228,24%,44%,1.00);
 }
 
 /*全局样式*/
 *{
 	padding: 0;
 	margin: 0;
-	/*outline:red 1px solid;*/
+	outline:none;
 }
 html{
 	width: 100%;
@@ -30,7 +34,7 @@ html{
 	/*定义滚动条高宽及背景 高宽分别对应横竖滚动条的尺寸*/
 	::-webkit-scrollbar{
     	width: 6px;
-    	background-color: #14172A;
+    	background-color:hsla(230,30%,12%,1.00);
 		border-radius: 3px;
 	}
 	
@@ -42,7 +46,7 @@ html{
 	/*定义滑块*/
 	::-webkit-scrollbar-thumb{
 		border-radius: 6px;
-    	background-color: RGBa(43, 92, 175, 1.00);
+    	background-color: var(--color1);
 	}
 
 	html{
@@ -54,18 +58,15 @@ html{
 		flex-direction: column;
 		background-color:RGBa(21, 24, 39,1.00);
 	}
-	p{
-		color: white;
-	}
-	div{
-		color: white;
+	p,div,.Btns{
+		color:var(--textC);
 	}
 /*顶栏样式*/
 	#TOP{
 		display: flex;
 		justify-content: center;
 		align-items: center;
-		background-color:RGB(26, 31, 50);
+		background-color:RGBa(26, 31, 50,1.00);
 	}
 /*logo*/
 	#logoimg{
@@ -96,7 +97,7 @@ html{
 		margin: 16px;
 		border-radius: 16px;
 		display: flex;
-		background:RGB(26, 31, 50);
+		background:RGBa(26, 31, 50,1.00);
 	}
 /*目录栏*/
 	#MIDL{
@@ -134,7 +135,7 @@ html{
 	#MIDMhr{
 		margin: 8px 0px;
 		height: 2px;
-		background-color: green;
+		background-color:var(--color1) ;
 	}
 	#MIDMB{
 		display: flex;
@@ -148,8 +149,8 @@ html{
 		margin: 2px 6px;
 		padding: 4px 6px;
 		border-radius: 12px;
-		border: black solid 2px;
-		box-shadow: 2px 2px 6px grey;
+		border:RGBa(39, 44, 63,1.00) solid 2px;
+		background-color:var(--color1);
 	}
 /*右边侧边栏*/
 	#MIDR{
@@ -177,4 +178,33 @@ html{
 
 .blockt,.menus{
 	padding:6px;
+}
+.block{
+	margin: 3px 0px;
+	cursor: default;
+}
+.blockt{
+	font-weight: bolder;
+	border-left: 8px var(--color1) solid;
+	background-color: hsla(228,24%,44%,0.2);
+	transition: all 0.5s;
+}
+
+.menus{
+	padding-left: 1em;
+	border-left: 8px RGBa(0,0,0,0) solid;
+	transition: all 1s;
+}
+.menus:hover{
+	font-size: 1.25em;
+	font-weight: bolder;
+	background-color:rgba(85,96,139,0.2);
+	border-left: 8px var(--color1) solid;
+	cursor: pointer;
+	transition: all 0.1s;
+}
+.menus:active{
+	background-color: hsla(228,24%,44%,0.2);
+	border-left:rgba(70,170,70,1.00) 8px solid;
+	transition: all 0.1s;
 }
