--- a/Css/index.css
+++ b/Css/index.css
@@ -8,7 +8,7 @@
 html,body{
 	width: 100%;
 	height: 100%;
-	min-height: 300px;
+	min-height: 500px;
 }
 @media (min-width: 1025px){
   /*::-webkit-scrollbar 滚动条整体部分，可以设置宽度啥的
@@ -32,20 +32,22 @@ html,body{
 	}
 	
 	#hover{
-		display: flex;
+		display: none;
 		flex-direction: column;
 		justify-content: center;
 		align-items: center;
-		background-color:rgba(0,0,0,0.5);
+		background-color:rgba(0,0,0,0.2);
 		position:absolute;
 		width: 100%;
 		height: 100%;
-		backdrop-filter:blur(4px);
+		min-height: 500px;
+		backdrop-filter:blur(6px);
+		transition: all 0.5s;
 	}
 	#Htost{
-		width: 30%;
+		width: 400px;
+		height: 300px;
 		min-width: 400px;
-		height: 20%;
 		min-height: 300px;
 		background-color: white;
 		border-radius: 12px;
@@ -53,7 +55,9 @@ html,body{
 		flex-direction: column;
 		justify-content: center;
 		align-items: center;
+		box-shadow: 2px 2px 36px grey;
 	}
+	
 	button{
 		width: 60px;
 	}
@@ -67,7 +71,9 @@ html,body{
 	}
 	#left{
 		display: flex;
-		width: 18%;
+		background-color: rgba(22,255,236,1.00);
+		box-shadow: 0px 0px 16px black;
+		width: 15%;
 		height: 100%;
 		justify-content: center;
 		align-items: flex-start;
@@ -99,7 +105,27 @@ html,body{
 	#Lbot{
 		height: 32px;
 	}
-	#right{
+	
+	#Right{
+		flex: 1;
+		background-color: grey;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		flex-direction: column;
+	}
+	
+	#Rightt{
+		height: 20px;
+		width: 100%;
+	}
+	#Rightb{
+		width: 100%;
+		flex: 1;
+		display: flex;
+		flex-direction: column;
+	}
+	#Rmid{
 		flex: 1;
 	}
 }
