--- a/Css/index.css
+++ b/Css/index.css
@@ -4,6 +4,7 @@
 	padding: 0;
 	margin: 0;
 	outline: red 1px solid;
+	font-family:
 }
 html,body{
 	width: 100%;
@@ -66,17 +67,17 @@ html,body{
 		width: 100%;
 		height: 100%;
 		background-color: rgba(218,255,252,1.00);
-		overflow-x: auto;
 		overflow-y: auto;
 	}
 	#left{
 		display: flex;
 		background-color: rgba(22,255,236,1.00);
 		box-shadow: 0px 0px 16px black;
-		width: 15%;
+		width: 200px;
+		min-width: 200px;
 		height: 100%;
 		justify-content: center;
-		align-items: flex-start;
+		align-items: center;
 		flex-direction: column;
 	}
 	#Ltop,#Lbot,#Lmid{
@@ -86,17 +87,21 @@ html,body{
 		width: 100%;
 	}
 	#Ltop{
-		
+		height: calc(20% + 12px);
+		width: 100%;
 	}
 	#Llogo{
-		width: 80%;
+		width: 100%;
 	}
 	#Lmid{
 		flex: 1;
 		width: 100%;
-		height: 0;
 	}
 	#menubar{
+		display: flex;
+		align-items: stretch;
+		justify-content: flex-start;
+		flex-direction: column;
 		height: 80%;
 		width: 80%;
 		overflow-y: auto;
@@ -110,20 +115,20 @@ html,body{
 		flex: 1;
 		background-color: grey;
 		display: flex;
-		justify-content: center;
-		align-items: center;
 		flex-direction: column;
+		align-items: stretch;
 	}
 	
 	#Rightt{
-		height: 20px;
-		width: 100%;
+		height: 20%;
+		background-color: greenyellow;
+		margin:12px;
+		margin-bottom:0;
 	}
 	#Rightb{
-		width: 100%;
-		flex: 1;
-		display: flex;
-		flex-direction: column;
+		height: 100%;
+		background-color: yellow;
+		margin:12px;
 	}
 	#Rmid{
 		flex: 1;
