--- a/Pages/CSS/menus.css
+++ b/Pages/CSS/menus.css
@@ -8,5 +8,11 @@
 	margin: 3px;
 	padding: 3px;
 	border-left: 6px blue solid;
-	transition: all 1s;
+	transition:all 1.5s ease-out;	
+}
+.menus:hover{
+	border-left: 10px #46aa46 solid;
+	background-color: rgba(0,0,0,0.15);
+	transition:all 0.1s ease-out;
+	font-weight: bolder;
 }
